small conf changes

--- a/templates/linux/mongodb.conf
+++ b/templates/linux/mongodb.conf
@@ -1,4 +1,9 @@
 bind_ip = 127.0.0.1
 dbpath=/var/lib/mongodb/
+
 logpath=/var/log/mongodb/mongodb.log
 logappend=true
+
+nohttpinterface=true
+smallfiles=true
+oplogSize=32
