allow multiple passenger-administered meteor apps on a single server

--- a/templates/linux/mongodb.conf
+++ b/templates/linux/mongodb.conf
@@ -6,4 +6,10 @@ logappend=true
 
 nohttpinterface=true
 smallfiles=true
-oplogSize=32
+oplogSize=16
+replSet=rs01
+
+storage.smallFiles=true
+replication.replSetName=rs01
+replication.replication.oplogSizeMB=16
+
